--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,19 @@ aiosignal==1.3.2
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 anyio==4.8.0
+asgiref==3.8.1
 attrs==25.1.0
 backoff==2.2.1
+bcrypt==4.3.0
 beautifulsoup4==4.13.3
+build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
 click==8.1.8
 colorclass==2.2.2
 coloredlogs==15.0.1
@@ -21,9 +26,11 @@ contourpy==1.3.1
 cryptography==44.0.1
 cycler==0.12.1
 dataclasses-json==0.6.7
+debugpy==1.8.13
 Deprecated==1.2.18
 dirtyjson==1.0.8
 distro==1.9.0
+durationpy==0.9
 easygui==0.98.3
 ebcdic==1.1.1
 effdet==0.4.1
@@ -31,6 +38,7 @@ emoji==2.14.1
 et_xmlfile==2.0.0
 eval_type_backport==0.2.2
 extract-msg==0.53.1
+fastapi==0.115.12
 filelock==3.13.1
 filetype==1.2.0
 flatbuffers==25.2.10
@@ -47,18 +55,27 @@ grpcio-status==1.70.0
 h11==0.14.0
 html5lib==1.1
 httpcore==1.0.7
+httptools==0.6.4
 httpx==0.28.1
+httpx-sse==0.4.0
 huggingface-hub==0.29.1
 humanfriendly==10.0
 idna==3.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
 Jinja2==3.1.4
 jiter==0.8.2
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 kiwisolver==1.4.8
-langchain-core==0.3.47
+kubernetes==32.0.1
+langchain==0.3.22
+langchain-chroma==0.2.2
+langchain-community==0.3.20
+langchain-core==0.3.50
 langchain-ollama==0.3.0
+langchain-text-splitters==0.3.7
 langdetect==1.0.9
 langgraph==0.3.11
 langgraph-checkpoint==2.0.20
@@ -82,9 +99,13 @@ llama-index-readers-file==0.4.6
 llama-index-readers-llama-parse==0.4.0
 llama-parse==0.6.2
 lxml==5.3.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.26.1
 matplotlib==3.10.1
+mdurl==0.1.2
+mmh3==5.1.0
+monotonic==1.6
 mpmath==1.3.0
 msgpack==1.1.0
 msoffcrypto-tool==5.4.2
@@ -105,6 +126,7 @@ nvidia-cusolver-cu11==11.4.1.48
 nvidia-cusparse-cu11==11.7.5.86
 nvidia-nccl-cu11==2.21.5
 nvidia-nvtx-cu11==11.8.86
+oauthlib==3.2.2
 olefile==0.47
 oletools==0.60.2
 ollama==0.4.7
@@ -114,7 +136,18 @@ onnxruntime==1.20.1
 openai==1.65.2
 opencv-python==4.11.0.86
 openpyxl==3.1.5
+opentelemetry-api==1.31.1
+opentelemetry-exporter-otlp-proto-common==1.31.1
+opentelemetry-exporter-otlp-proto-grpc==1.31.1
+opentelemetry-instrumentation==0.52b1
+opentelemetry-instrumentation-asgi==0.52b1
+opentelemetry-instrumentation-fastapi==0.52b1
+opentelemetry-proto==1.31.1
+opentelemetry-sdk==1.31.1
+opentelemetry-semantic-conventions==0.52b1
+opentelemetry-util-http==0.52b1
 orjson==3.10.15
+overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
 pcodedmp==1.2.6
@@ -123,6 +156,7 @@ pdfminer.six==20240706
 pi_heif==0.21.0
 pikepdf==9.5.2
 pillow==11.0.0
+posthog==3.23.0
 propcache==0.3.0
 proto-plus==1.26.0
 protobuf==5.29.3
@@ -132,10 +166,14 @@ pyasn1_modules==0.4.1
 pycocotools==2.0.8
 pycparser==2.22
 pydantic==2.10.6
+pydantic-settings==2.8.1
 pydantic_core==2.27.2
+Pygments==2.19.1
 pyparsing==3.2.1
 pypdf==5.3.1
 pypdfium2==4.30.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-iso639==2025.2.18
@@ -148,17 +186,21 @@ RapidFuzz==3.12.2
 red-black-tree-mod==1.22
 regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+rich==14.0.0
 rsa==4.9
 RTFDE==0.1.2
 safetensors==0.5.2
 scipy==1.15.2
 sentencepiece==0.2.0
 setuptools==70.2.0
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.38
+starlette==0.46.1
 striprtf==0.0.26
 sympy==1.13.1
 tenacity==9.0.0
@@ -171,6 +213,7 @@ torchvision==0.21.0+cu118
 tqdm==4.67.1
 transformers==4.49.0
 triton==3.2.0
+typer==0.15.2
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2025.1
@@ -180,8 +223,14 @@ unstructured-client==0.31.0
 unstructured-inference==0.8.7
 unstructured.pytesseract==0.3.13
 urllib3==2.3.0
+uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.0.4
 webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
 wrapt==1.17.2
 xlrd==2.0.1
 yarl==1.18.3
+zipp==3.21.0
 zstandard==0.23.0
