--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,27 @@
+absl-py==2.2.2
 aiofiles==24.1.0
 aiohappyeyeballs==2.4.8
 aiohttp==3.11.13
 aiosignal==1.3.2
+airportsdata==20250224
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 anyio==4.8.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
 asgiref==3.8.1
+astor==0.8.1
+asttokens==3.0.0
+async-lru==2.0.5
 attrs==25.1.0
+babel==2.17.0
+backcall==0.2.0
 backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.3
+blake3==1.0.4
+bleach==6.2.0
 build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.1.31
@@ -19,32 +31,51 @@ charset-normalizer==3.4.1
 chroma-hnswlib==0.7.6
 chromadb==0.6.3
 click==8.1.8
+cloudpickle==3.1.1
 colorclass==2.2.2
 coloredlogs==15.0.1
+comm==0.2.2
+compressed-tensors==0.9.3
 compressed_rtf==1.0.6
 contourpy==1.3.1
 cryptography==44.0.1
+cupy-cuda12x==13.4.1
 cycler==0.12.1
 dataclasses-json==0.6.7
 debugpy==1.8.13
+decorator==5.2.1
+defusedxml==0.7.1
 Deprecated==1.2.18
+depyf==0.18.0
+dill==0.4.0
 dirtyjson==1.0.8
+diskcache==5.6.3
 distro==1.9.0
+dnspython==2.7.0
+docopt==0.6.2
 durationpy==0.9
 easygui==0.98.3
 ebcdic==1.1.1
 effdet==0.4.1
+einops==0.8.1
+email_validator==2.2.0
 emoji==2.14.1
 et_xmlfile==2.0.0
 eval_type_backport==0.2.2
+executing==2.2.0
 extract-msg==0.53.1
 fastapi==0.115.12
-filelock==3.13.1
+fastapi-cli==0.0.7
+fastjsonschema==2.21.1
+fastrlock==0.8.3
+filelock==3.18.0
 filetype==1.2.0
 flatbuffers==25.2.10
 fonttools==4.56.0
+fqdn==1.5.1
 frozenlist==1.5.0
 fsspec==2024.6.1
+gguf==0.16.2
 google-api-core==2.24.1
 google-auth==2.38.0
 google-cloud-vision==3.10.0
@@ -53,21 +84,44 @@ greenlet==3.1.1
 grpcio==1.70.0
 grpcio-status==1.70.0
 h11==0.14.0
+hf-xet==1.0.5
 html5lib==1.1
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.0
-huggingface-hub==0.29.1
+huggingface-hub==0.30.2
 humanfriendly==10.0
 idna==3.10
-importlib_metadata==8.6.1
+importlib_metadata==8.0.0
 importlib_resources==6.5.2
-Jinja2==3.1.4
+interegular==0.3.3
+ipykernel==6.29.5
+ipython==8.12.3
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.6
+isoduration==20.11.0
+jedi==0.19.2
+Jinja2==3.1.6
 jiter==0.8.2
 joblib==1.4.2
+json5==0.12.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.14
 kiwisolver==1.4.8
 kubernetes==32.0.1
 langchain==0.3.22
@@ -81,8 +135,8 @@ langgraph==0.3.11
 langgraph-checkpoint==2.0.20
 langgraph-prebuilt==0.1.3
 langgraph-sdk==0.1.57
-langsmith==0.3.15
-lark==1.1.9
+langsmith==0.3.42
+lark==1.2.2
 llama-cloud==0.1.13
 llama-cloud-services==0.6.3
 llama-index==0.12.22
@@ -98,34 +152,62 @@ llama-index-question-gen-openai==0.3.0
 llama-index-readers-file==0.4.6
 llama-index-readers-llama-parse==0.4.0
 llama-parse==0.6.2
+llguidance==0.7.19
+llvmlite==0.44.0
+lm-format-enforcer==0.10.11
 lxml==5.3.1
+Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.26.1
 matplotlib==3.10.1
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+mistral_common==1.5.4
+mistune==3.1.3
 mmh3==5.1.0
 monotonic==1.6
 mpmath==1.3.0
 msgpack==1.1.0
+msgspec==0.19.0
 msoffcrypto-tool==5.4.2
 multidict==6.1.0
 mypy-extensions==1.0.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.3
+ninja==1.11.1.4
 nltk==3.9.1
+notebook==7.4.0
+notebook_shim==0.2.4
+numba==0.61.2
 numpy==1.26.4
 nvidia-cublas-cu11==11.11.3.6
+nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu11==11.8.87
+nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu11==11.8.89
+nvidia-cuda-nvrtc-cu12==12.4.127
 nvidia-cuda-runtime-cu11==11.8.89
+nvidia-cuda-runtime-cu12==12.4.127
 nvidia-cudnn-cu11==9.1.0.70
+nvidia-cudnn-cu12==9.1.0.70
 nvidia-cufft-cu11==10.9.0.58
+nvidia-cufft-cu12==11.2.1.3
 nvidia-curand-cu11==10.3.0.86
+nvidia-curand-cu12==10.3.5.147
 nvidia-cusolver-cu11==11.4.1.48
+nvidia-cusolver-cu12==11.6.1.9
 nvidia-cusparse-cu11==11.7.5.86
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
 nvidia-nccl-cu11==2.21.5
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu11==11.8.86
+nvidia-nvtx-cu12==12.4.127
 oauthlib==3.2.2
 olefile==0.47
 oletools==0.60.2
@@ -133,37 +215,57 @@ ollama==0.4.7
 omegaconf==2.3.0
 onnx==1.17.0
 onnxruntime==1.20.1
-openai==1.65.2
+openai==1.77.0
 opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
-opentelemetry-api==1.31.1
-opentelemetry-exporter-otlp-proto-common==1.31.1
-opentelemetry-exporter-otlp-proto-grpc==1.31.1
+opentelemetry-api==1.26.0
+opentelemetry-exporter-otlp==1.26.0
+opentelemetry-exporter-otlp-proto-common==1.26.0
+opentelemetry-exporter-otlp-proto-grpc==1.26.0
+opentelemetry-exporter-otlp-proto-http==1.26.0
 opentelemetry-instrumentation==0.52b1
 opentelemetry-instrumentation-asgi==0.52b1
 opentelemetry-instrumentation-fastapi==0.52b1
-opentelemetry-proto==1.31.1
-opentelemetry-sdk==1.31.1
-opentelemetry-semantic-conventions==0.52b1
+opentelemetry-proto==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-semantic-conventions==0.47b0
+opentelemetry-semantic-conventions-ai==0.4.3
 opentelemetry-util-http==0.52b1
 orjson==3.10.15
+outlines==0.1.11
+outlines_core==0.1.26
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+partial-json-parser==0.2.1.1.post5
 pcodedmp==1.2.6
 pdf2image==1.17.0
 pdfminer.six==20240706
+pexpect==4.9.0
 pi_heif==0.21.0
+pickleshare==0.7.5
 pikepdf==9.5.2
 pillow==11.0.0
+pipreqs==0.5.0
+platformdirs==4.3.7
 posthog==3.23.0
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
 propcache==0.3.0
 proto-plus==1.26.0
-protobuf==5.29.3
+protobuf==4.25.7
 psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycocotools==2.0.8
+pycountry==24.6.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic-settings==2.8.1
@@ -177,43 +279,61 @@ pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-iso639==2025.2.18
+python-json-logger==3.3.0
 python-magic==0.4.27
 python-multipart==0.0.20
 python-oxmsg==0.0.2
+pytictoc==1.5.3
 pytz==2025.1
 PyYAML==6.0.2
+pyzmq==26.4.0
 RapidFuzz==3.12.2
+ray==2.43.0
 red-black-tree-mod==1.22
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==14.0.0
+rich-toolkit==0.14.3
+rpds-py==0.24.0
 rsa==4.9
 RTFDE==0.1.2
 safetensors==0.5.2
 scipy==1.15.2
+Send2Trash==1.8.3
 sentencepiece==0.2.0
-setuptools==70.2.0
+setuptools==80.0.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.38
+stack-data==0.6.3
 starlette==0.46.1
 striprtf==0.0.26
 sympy==1.13.1
 tenacity==9.0.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+terminado==0.18.1
 tiktoken==0.9.0
 timm==1.0.15
+tinycss2==1.4.0
 tokenizers==0.21.0
-torch==2.6.0+cu118
-torchaudio==2.6.0+cu118
-torchvision==0.21.0+cu118
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
+tornado==6.4.2
 tqdm==4.67.1
-transformers==4.49.0
+traitlets==5.14.3
+transformers==4.51.3
 triton==3.2.0
 typer==0.15.2
+types-python-dateutil==2.9.0.20241206
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2025.1
@@ -222,15 +342,24 @@ unstructured==0.16.23
 unstructured-client==0.31.0
 unstructured-inference==0.8.7
 unstructured.pytesseract==0.3.13
+uri-template==1.3.0
 urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
+vllm==0.8.4
 watchfiles==1.0.4
+wcwidth==0.2.13
+webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
+Werkzeug==3.1.3
+widgetsnbextension==4.0.14
 wrapt==1.17.2
+xformers==0.0.29.post2
+xgrammar==0.1.18
 xlrd==2.0.1
+yarg==0.1.9
 yarl==1.18.3
 zipp==3.21.0
 zstandard==0.23.0
