Refactor environment configuration, update entity types, and enhance query handling in Lightrag implementation

--- a/src/env.example
+++ b/src/env.example
@@ -24,6 +24,7 @@ LLM_AGENT_BINDING_API_KEY=empty
 
 LIGHTRAG_API_URL=http://localhost:8080/chat/
 
-ENTITY_TYPES='["Reference_Number", "Operation_Phase", "Code", "Person", "Email_Address", "Organization", "Client", "Location", "Destination", "Event", "Date" , "Shipper", "Cargo", "Cargo_Details", "Cost", "Concept", "Vessel", "Artifact", "Attachment", "Information"]'
-RELATED_CHUNK_NUMBER=4
-TOP_K=40
+ENTITY_TYPES='["Reference_Number", "Code", "Person", "Email_Address", "Organization", "Role", "Location", "Address", "Date", "Event", "Operation_Phase", "Transport", "Cargo", "Financial_Detail", "Quantity", "Unit", "Document", "Attachment", "Instruction", "Issue", "Concept"]'
+RELATED_CHUNK_NUMBER=6
+MIN_RERANK_SCORE=0.1
+TOP_K=50
