Experimented with ocr

--- a/evaluation/env.example
+++ b/evaluation/env.example
@@ -1,4 +1,4 @@
-EVAL_LLM_MODEL=gemini-3-flash-preview
+EVAL_LLM_MODEL=gemini-2.5-flash
 EVAL_LLM_BINDING_API_KEY=your-api-key-here
 EVAL_LLM_BINDING_HOST=https://generativelanguage.googleapis.com/v1beta/models
 EVAL_EMBEDDING_MODEL=gemini-embedding-001
