Create evaluation script for the preprocessing stage

--- a/src/env.example
+++ b/src/env.example
@@ -18,13 +18,17 @@ LLM_MODEL=Qwen/Qwen2.5-14B-Instruct-GPTQ-Int8
 LLM_BINDING_HOST=http://localhost:8001/v1
 LLM_BINDING_API_KEY=empty
 
-LLM_AGENT_MODEL=Qwen/Qwen2.5-3B-Instruct
+LLM_AGENT_MODEL=Qwen/Qwen2.5-7B-Instruct-GPTQ-Int8 
 LLM_AGENT_BINDING_HOST=http://localhost:8002/v1
 LLM_AGENT_BINDING_API_KEY=empty
 
 LIGHTRAG_API_URL=http://localhost:8080/chat/
 
-ENTITY_TYPES='["Reference_Number", "Code", "Person", "Email_Address", "Organization", "Role", "Location", "Address", "Date", "Event", "Operation_Phase", "Transport", "Cargo", "Financial_Detail", "Quantity", "Unit", "Document", "Attachment", "Instruction", "Issue", "Concept"]'
-RELATED_CHUNK_NUMBER=6
-MIN_RERANK_SCORE=0.1
-TOP_K=50
+ENTITY_TYPES='["Project_ID", "Code", "Person", "Email_Address", "Organization", "Shipper", "Consignee", "Carrier", "Role", "Location", "Address", "Date", "Event", "Operation_Phase", "Transport_Name", "Transportation_Service", "Cargo_Content", "Financial_Detail", "Quantity", "Unit", "Document", "Attachment", "Instruction", "Issue", "Concept"]'
+ENABLE_LLM_CACHE=false
+RELATED_CHUNK_NUMBER=8
+CHUNK_TOP_K=13
+MIN_RERANK_SCORE=0.2
+TOP_K=60
+MAX_ASYNC=4
+MAX_PARALLEL_INSERT=2
