--- a/evaluation/environment.yml
+++ b/evaluation/environment.yml
@@ -45,10 +45,15 @@ dependencies:
       - ascii-colors==0.11.7
       - attrs==25.4.0
       - certifi==2026.1.4
+      - cffi==2.0.0
       - cfgv==3.5.0
       - charset-normalizer==3.4.4
       - click==8.3.1
+      - colorama==0.4.6
       - configparser==7.2.0
+      - cryptography==46.0.4
+      - cuda-bindings==12.9.4
+      - cuda-pathfinder==1.3.3
       - dataclasses-json==0.6.7
       - datasets==4.5.0
       - dill==0.4.0
@@ -57,108 +62,156 @@ dependencies:
       - distro==1.9.0
       - docstring-parser==0.17.0
       - dotenv==0.9.9
+      - fastuuid==0.14.0
       - filelock==3.20.3
       - filetype==1.2.0
       - frozenlist==1.8.0
       - fsspec==2025.10.0
+      - google-ai-generativelanguage==0.10.0
       - google-api-core==2.29.0
-      - google-auth==2.47.0
-      - google-genai==1.57.0
+      - google-api-python-client==2.188.0
+      - google-auth==2.48.0
+      - google-auth-httplib2==0.3.0
+      - google-genai==1.60.0
       - googleapis-common-protos==1.72.0
-      - greenlet==3.3.0
+      - greenlet==3.3.1
+      - grpcio==1.76.0
+      - grpcio-status==1.71.2
       - h11==0.16.0
       - hf-xet==1.2.0
       - httpcore==1.0.9
+      - httplib2==0.31.2
       - httpx==0.28.1
       - httpx-sse==0.4.3
-      - huggingface-hub==1.3.2
+      - huggingface-hub==1.3.5
       - identify==2.6.16
       - idna==3.11
-      - instructor==1.14.3
+      - importlib-metadata==8.7.1
+      - instructor==1.14.5
       - jinja2==3.1.6
       - jiter==0.11.1
+      - joblib==1.5.3
       - json-repair==0.55.0
       - jsonpatch==1.33
       - jsonpointer==3.0.0
       - jsonref==1.1.0
-      - langchain==1.2.4
+      - jsonschema==4.26.0
+      - jsonschema-specifications==2025.9.1
+      - langchain==1.2.7
       - langchain-classic==1.0.1
       - langchain-community==0.4.1
       - langchain-core==1.2.7
-      - langchain-google-genai==4.2.0
+      - langchain-google-genai==2.1.12
       - langchain-openai==1.1.7
       - langchain-text-splitters==1.1.0
-      - langgraph==1.0.6
+      - langgraph==1.0.7
       - langgraph-checkpoint==4.0.0
-      - langgraph-prebuilt==1.0.6
+      - langgraph-prebuilt==1.0.7
       - langgraph-sdk==0.3.3
-      - langsmith==0.6.3
-      - lightrag-hku==1.4.9.11
+      - langsmith==0.6.6
+      - lightrag-hku==1.4.9.12
+      - litellm==1.81.5
+      - lxml==6.0.2
       - markdown-it-py==4.0.0
       - markupsafe==3.0.3
       - marshmallow==3.26.2
       - mdurl==0.1.2
-      - multidict==6.7.0
+      - mpmath==1.3.0
+      - multidict==6.7.1
       - multiprocess==0.70.18
       - mypy-extensions==1.1.0
       - nano-vectordb==0.0.4.3
       - nest-asyncio==1.6.0
       - networkx==3.6.1
       - nodeenv==1.10.0
-      - numpy==1.26.4
-      - openai==2.15.0
-      - orjson==3.11.5
-      - ormsgpack==1.12.1
+      - numpy==2.4.1
+      - nvidia-cublas-cu12==12.8.4.1
+      - nvidia-cuda-cupti-cu12==12.8.90
+      - nvidia-cuda-nvrtc-cu12==12.8.93
+      - nvidia-cuda-runtime-cu12==12.8.90
+      - nvidia-cudnn-cu12==9.10.2.21
+      - nvidia-cufft-cu12==11.3.3.83
+      - nvidia-cufile-cu12==1.13.1.3
+      - nvidia-curand-cu12==10.3.9.90
+      - nvidia-cusolver-cu12==11.7.3.90
+      - nvidia-cusparse-cu12==12.5.8.93
+      - nvidia-cusparselt-cu12==0.7.1
+      - nvidia-nccl-cu12==2.27.5
+      - nvidia-nvjitlink-cu12==12.8.93
+      - nvidia-nvshmem-cu12==3.4.5
+      - nvidia-nvtx-cu12==12.8.90
+      - openai==2.16.0
+      - orjson==3.11.6
+      - ormsgpack==1.12.2
       - packaging==25.0
       - pandas==2.3.3
       - pillow==12.1.0
       - pipmaster==1.1.0
       - platformdirs==4.5.1
+      - portalocker==3.2.0
       - pre-commit==4.5.1
       - propcache==0.4.1
       - proto-plus==1.27.0
-      - protobuf==6.33.4
-      - pyarrow==22.0.0
-      - pyasn1==0.6.1
+      - protobuf==5.29.5
+      - pyarrow==23.0.0
+      - pyasn1==0.6.2
       - pyasn1-modules==0.4.2
+      - pycparser==3.0
       - pydantic==2.12.5
       - pydantic-core==2.41.5
       - pydantic-settings==2.12.0
       - pygments==2.19.2
+      - pyparsing==3.3.2
       - pypinyin==0.55.0
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.2.1
       - pytz==2025.2
       - pyyaml==6.0.3
       - ragas==0.4.3
-      - regex==2026.1.14
+      - rapidfuzz==3.14.3
+      - referencing==0.37.0
+      - regex==2026.1.15
       - requests==2.32.5
       - requests-toolbelt==1.0.0
-      - rich==14.2.0
+      - rich==14.3.1
+      - rpds-py==0.30.0
       - rsa==4.9.1
+      - sacrebleu==2.6.0
+      - safetensors==0.7.0
+      - scikit-learn==1.8.0
       - scikit-network==0.33.5
       - scipy==1.17.0
+      - sentence-transformers==5.2.2
       - shellingham==1.5.4
       - six==1.17.0
       - sniffio==1.3.1
-      - sqlalchemy==2.0.45
+      - sqlalchemy==2.0.46
+      - sympy==1.14.0
+      - tabulate==0.9.0
       - tenacity==9.1.2
+      - threadpoolctl==3.6.0
       - tiktoken==0.12.0
+      - tokenizers==0.22.2
+      - torch==2.10.0
       - tqdm==4.67.1
-      - ty==0.0.11
+      - transformers==5.0.0
+      - triton==3.6.0
+      - ty==0.0.14
       - typer==0.21.1
       - typer-slim==0.21.1
       - typing-extensions==4.15.0
       - typing-inspect==0.9.0
       - typing-inspection==0.4.2
       - tzdata==2025.3
+      - uritemplate==4.2.0
       - urllib3==2.6.3
-      - uuid-utils==0.13.0
+      - uuid-utils==0.14.0
       - virtualenv==20.36.1
       - wcwidth==0.2.14
       - websockets==15.0.1
       - xlsxwriter==3.2.9
       - xxhash==3.6.0
       - yarl==1.22.0
+      - zipp==3.23.0
       - zstandard==0.25.0
 prefix: /home/chryssida/miniconda3/envs/eval-venv
